src/app/wizard/pages/intro/intro.component.scss
@import url(https://overpass-30e2.kxcdn.com/overpass.css);
$assetPath : "../../../../assets/img/project-select-icons/";

.content {
  display: flex;
  flex-direction: column;
  height: calc(100% - 135px);
  font-family: 'Overpass', sans-serif;
}

#intro {
  margin-top: 40px;

  img {
    position: fixed;
    top: 0;
    left: 0;

    min-width: 100%;
    z-index: -1;
  }

  h1 {
    color: #fff;
    font-size: 46pt;
    font-weight: bold;
  }
  h2 {
    color: #c00;
    font-weight: bold;
  }
  .row {
    margin-top: 5px;
  }
  .btn {
    background: #c00 none;
    border-color: #c00;
    color: #fff;
    padding: 9px 40px;
    margin-top: 40px;
    margin-bottom: 30px;
    line-height: 1.44;
    font-size: 18px;
  }
}

#runtimes {
  flex: 1;
  background-color: #f5f5f5;
  padding-top: 70px;
  h1 {
    color: #c00;
    font-weight: bold;
  }
  a:hover {
    color: #0088ce;
  }
  .runtime {
    height: 245px;
    text-align: center;
    display:flex;
    justify-content:center;
    align-items:center;
    .inner {
      background-color: #d1d1d1;
      padding: 40px 70px;
      width: 100%;
    }
    .icon-circle {
      background-color: white;
      border-radius: 65px;
    }

  }
}

.icon {
  background-size: 100% 100%;
  background: no-repeat center;
  margin: auto;
  width:110px;
  height:110px;
}
.boot {
  background-image: url(#{$assetPath}spring-boot-logo.png);
  background-size: 65%;
}

.swarm {
  background-image: url(#{$assetPath}wildfly-swarm.png);
  background-size: 65%;
}

.vertx {
  background-image: url(#{$assetPath}vertx.svg);
  background-size: 80%;
}

@media (max-width: 425px) {
  .content {
    height: inherit;
  }
  #intro {
    margin-top: 0;
    h1 {
      font-size: 22pt;
    }
  }
  #runtimes {
    padding-top: 0;
    .runtime .inner {
      padding: 25px;
    }
  }
}

@media (max-width: 768px) and (min-width: 426px) {
  .content {
    height: inherit;
  }
  #intro {
    margin-top: 0;
    h1 {
      font-size: 28pt;
    }
  }
  #runtimes {
    padding-top: 20px;
    .runtime .inner {
      padding: 25px;
    }
  }
}

@media (max-width: 1024px) and (min-width: 769px) {
  #intro h1 {
    font-size: 35pt;
  }
  #runtimes .runtime .inner {
    padding: 20px 50px;
  }
}

@media (max-width: 1200px) and (min-width: 1025px) {
  #intro {
    margin-top: 0;
  }
}

